src/axis/core/syn/grammar/AxisParser.py
# Generated from src/axis/core/syn/grammar/Axis.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AxisParser ( Parser ):

    grammarFileName = "Axis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'unit'", "'mod'", "'def'", "'val'", "':'", 
                     "'='", "';'", "'use'", "'takes'", "'where'", "'returns'", 
                     "'suite'", "'('", "','", "')'", "'..'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'.'", "'::'", "'@'", "'['", 
                     "']'", "'{'", "'->'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "DECIMAL", "TEXT", 
                      "WS", "COMMENT" ]

    RULE_unitItem = 0
    RULE_modItem = 1
    RULE_defItem = 2
    RULE_valItem = 3
    RULE_useBlock = 4
    RULE_takesBlock = 5
    RULE_whereBlock = 6
    RULE_returnsBlock = 7
    RULE_suiteBlock = 8
    RULE_suite = 9
    RULE_statement = 10
    RULE_valStatement = 11
    RULE_pattern = 12
    RULE_tuplePattern = 13
    RULE_tuplePatternElement = 14
    RULE_expression = 15
    RULE_juxtaposition = 16
    RULE_range = 17
    RULE_logical = 18
    RULE_logicalOp = 19
    RULE_comparison = 20
    RULE_comparisonOp = 21
    RULE_addition = 22
    RULE_additiveOp = 23
    RULE_product = 24
    RULE_productiveOp = 25
    RULE_prefix = 26
    RULE_postfix = 27
    RULE_primary = 28
    RULE_symExpr = 29
    RULE_lit = 30
    RULE_tuple = 31
    RULE_shape = 32
    RULE_element = 33
    RULE_valueElement = 34
    RULE_nominalElement = 35
    RULE_spreadElement = 36
    RULE_lambda = 37
    RULE_semicolon = 38
    RULE_lambdaParams = 39
    RULE_lambdaParam = 40

    ruleNames =  [ "unitItem", "modItem", "defItem", "valItem", "useBlock", 
                   "takesBlock", "whereBlock", "returnsBlock", "suiteBlock", 
                   "suite", "statement", "valStatement", "pattern", "tuplePattern", 
                   "tuplePatternElement", "expression", "juxtaposition", 
                   "range", "logical", "logicalOp", "comparison", "comparisonOp", 
                   "addition", "additiveOp", "product", "productiveOp", 
                   "prefix", "postfix", "primary", "symExpr", "lit", "tuple", 
                   "shape", "element", "valueElement", "nominalElement", 
                   "spreadElement", "lambda", "semicolon", "lambdaParams", 
                   "lambdaParam" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ID=38
    DECIMAL=39
    TEXT=40
    WS=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UnitItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_unitItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitItem" ):
                listener.enterUnitItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitItem" ):
                listener.exitUnitItem(self)




    def unitItem(self):

        localctx = AxisParser.UnitItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_unitItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(AxisParser.T__0)
            self.state = 83
            self.expression()
            self.state = 84
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_modItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModItem" ):
                listener.enterModItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModItem" ):
                listener.exitModItem(self)




    def modItem(self):

        localctx = AxisParser.ModItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_modItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(AxisParser.T__1)
            self.state = 87
            self.expression()
            self.state = 88
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_defItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefItem" ):
                listener.enterDefItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefItem" ):
                listener.exitDefItem(self)




    def defItem(self):

        localctx = AxisParser.DefItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(AxisParser.T__2)
            self.state = 91
            self.expression()
            self.state = 92
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AxisParser.ExpressionContext,i)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_valItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValItem" ):
                listener.enterValItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValItem" ):
                listener.exitValItem(self)




    def valItem(self):

        localctx = AxisParser.ValItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_valItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(AxisParser.T__3)
            self.state = 95
            self.expression()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 96
                self.match(AxisParser.T__4)
                self.state = 97
                self.expression()


            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 100
                self.match(AxisParser.T__5)
                self.state = 101
                self.expression()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 104
                self.match(AxisParser.T__6)


            self.state = 107
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_useBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseBlock" ):
                listener.enterUseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseBlock" ):
                listener.exitUseBlock(self)




    def useBlock(self):

        localctx = AxisParser.UseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_useBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AxisParser.T__7)
            self.state = 110
            self.expression()
            self.state = 111
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TakesBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def ID(self):
            return self.getToken(AxisParser.ID, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_takesBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTakesBlock" ):
                listener.enterTakesBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTakesBlock" ):
                listener.exitTakesBlock(self)




    def takesBlock(self):

        localctx = AxisParser.TakesBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_takesBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(AxisParser.T__8)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 114
                self.match(AxisParser.ID)


            self.state = 117
            self.match(AxisParser.T__4)
            self.state = 118
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_whereBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereBlock" ):
                listener.enterWhereBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereBlock" ):
                listener.exitWhereBlock(self)




    def whereBlock(self):

        localctx = AxisParser.WhereBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whereBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(AxisParser.T__9)
            self.state = 121
            self.match(AxisParser.T__4)
            self.state = 122
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_returnsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnsBlock" ):
                listener.enterReturnsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnsBlock" ):
                listener.exitReturnsBlock(self)




    def returnsBlock(self):

        localctx = AxisParser.ReturnsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnsBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(AxisParser.T__10)
            self.state = 125
            self.expression()
            self.state = 126
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.StatementContext)
            else:
                return self.getTypedRuleContext(AxisParser.StatementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_suiteBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuiteBlock" ):
                listener.enterSuiteBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuiteBlock" ):
                listener.exitSuiteBlock(self)




    def suiteBlock(self):

        localctx = AxisParser.SuiteBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_suiteBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(AxisParser.T__11)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1958505095184) != 0):
                self.state = 129
                self.statement()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.StatementContext)
            else:
                return self.getTypedRuleContext(AxisParser.StatementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = AxisParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1958505095184) != 0):
                self.state = 137
                self.statement()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valStatement(self):
            return self.getTypedRuleContext(AxisParser.ValStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = AxisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.valStatement()
                pass
            elif token in [13, 35, 38, 39, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(AxisParser.PatternContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AxisParser.ExpressionContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_valStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValStatement" ):
                listener.enterValStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValStatement" ):
                listener.exitValStatement(self)




    def valStatement(self):

        localctx = AxisParser.ValStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(AxisParser.T__3)

            self.state = 148
            self.pattern()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 149
                self.match(AxisParser.T__4)
                self.state = 150
                self.expression()


            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 153
                self.match(AxisParser.T__5)
                self.state = 154
                self.expression()


            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 157
                self.match(AxisParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AxisParser.ID, 0)

        def tuplePattern(self):
            return self.getTypedRuleContext(AxisParser.TuplePatternContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = AxisParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pattern)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(AxisParser.ID)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.tuplePattern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplePatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tuplePatternElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.TuplePatternElementContext)
            else:
                return self.getTypedRuleContext(AxisParser.TuplePatternElementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_tuplePattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplePattern" ):
                listener.enterTuplePattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplePattern" ):
                listener.exitTuplePattern(self)




    def tuplePattern(self):

        localctx = AxisParser.TuplePatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_tuplePattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(AxisParser.T__12)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 165
                self.tuplePatternElement()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 166
                    self.match(AxisParser.T__13)
                    self.state = 167
                    self.tuplePatternElement()
                    self.state = 172
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 175
            self.match(AxisParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplePatternElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AxisParser.ID)
            else:
                return self.getToken(AxisParser.ID, i)

        def getRuleIndex(self):
            return AxisParser.RULE_tuplePatternElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplePatternElement" ):
                listener.enterTuplePatternElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplePatternElement" ):
                listener.exitTuplePatternElement(self)




    def tuplePatternElement(self):

        localctx = AxisParser.TuplePatternElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_tuplePatternElement)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(AxisParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(AxisParser.ID)
                self.state = 179
                self.match(AxisParser.T__4)
                self.state = 180
                self.match(AxisParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def juxtaposition(self):
            return self.getTypedRuleContext(AxisParser.JuxtapositionContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = AxisParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.juxtaposition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JuxtapositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def range_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.RangeContext)
            else:
                return self.getTypedRuleContext(AxisParser.RangeContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_juxtaposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJuxtaposition" ):
                listener.enterJuxtaposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJuxtaposition" ):
                listener.exitJuxtaposition(self)




    def juxtaposition(self):

        localctx = AxisParser.JuxtapositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_juxtaposition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.range_()
            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 186
                    self.range_() 
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.LogicalContext)
            else:
                return self.getTypedRuleContext(AxisParser.LogicalContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)
